test/files/neg/t5753.check
Test_2.scala:9: error: macro implementation not found: foo
(the most common reason for that is that you cannot use macro implementations in the same compilation run that defines them)
 println(foo(42))
            ^
one error found
